added chat route

--- a/templates/bookmarks.html
+++ b/templates/bookmarks.html
@@ -34,5 +34,9 @@
         </div>
         {% endfor %}
     </div>
+
+    <p class="mb-5 text-muted text-center medium" style="margin:25px 25px;">
+         Please do leave a message in <a href="/chat" class="link"><i class="fa fa-comments" class="text-primary"></i> Chat.</a>
+    </p>
     {% endif %}
 {% endblock %}
