--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,16 +30,46 @@
             <div class="collapse navbar-collapse" id="navbar">
                 {% if session["user_id"] %}
                     <ul class="navbar-nav me-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/preferences">Preferences</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/bookmarks">Bookmarks</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/preferences">
+                                <i class="fa fa-gear" class="text-primary"></i> Preferences
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/bookmarks">
+                                <i class="fa fa-bookmark" class="text-primary"></i> Bookmarks
+                            </a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav ms-auto mt-2 nav-pills">
-                        <li class="nav-item log"><a class="nav-link active" href="/logout" style="color:white;">Log Out</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/chat">
+                                <i class="fa fa-comments" class="text-primary"></i> Chat
+                            </a>
+                        </li>
+                        <li class="nav-item log">
+                            <a class="nav-link active" href="/logout" style="color:white;">
+                                <i class="fa fa-sign-out"></i> Log Out
+                            </a>
+                        </li>
                     </ul>
                 {% else %}
                     <ul class="navbar-nav ms-auto mt-2 nav-pills">
-                        <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                        <li class="nav-item log"><a class="nav-link active" href="/login" style="color:white;">Log In</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/chat">
+                                <i class="fa fa-comments" class="text-primary"></i> Chat
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/register">
+                               <i class="fa fa-pencil-square"></i> Register
+                            </a>
+                        </li>
+                        <li class="nav-item log">
+                            <a class="nav-link active" href="/login" style="color:white;">
+                            <i class="fa fa-sign-in" style="color:white;"></i> Log In
+                            </a>
+                        </li>
                     </ul>
                 {% endif %}
             </div>
