added more icons

--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
                 <div class="mb-3">
                     <input class="form-control mx-auto w-auto" id="password" required="required" name="password" placeholder="Password" type="password">
                 </div>
-                <button class="btn btn-primary" type="submit">Login</button>
+                <button class="btn btn-primary" type="submit"><i class="fa fa-sign-in" style="color:white;"></i> Login</button>
                 <p class="mb-5 small text-center text-muted">Not Registered? Please <a href="/register">Register</a>.</p> 
             </form>
         </div>
