--- a/templates/register.html
+++ b/templates/register.html
@@ -22,7 +22,7 @@
                 <div class="mb-3">
                     <input class="form-control mx-auto w-auto" minlength="4" maxlength="8" id="repassword" required="required" name="repassword" placeholder="Re-Enter Password" type="password">
                 </div>
-                <button class="btn btn-primary" type="submit">Register</button>
+                <button class="btn btn-primary" type="submit"><i class="fa fa-pencil-square"></i> Register</button>
                 <p class="mb-5 small text-center text-muted">Already Registered? Please <a href="/login">Login</a>.</p> 
             </form>
         </div>
