--- a/templates/preferences.html
+++ b/templates/preferences.html
@@ -42,6 +42,6 @@
                 {% endfor %}
             </select>
         </div>
-        <button class="btn btn-primary" type="submit">Save</button> 
+        <button class="btn btn-primary" type="submit"><i class="fa fa-check-circle"></i> Save</button> 
     </form>
 {% endblock %}
