--- a/templates/layout.html
+++ b/templates/layout.html
@@ -92,7 +92,10 @@
     <footer class="mb-5 medium text-center text-muted">
         Project by
         <a href="https://github.com/etank0" style="text-decoration:none;color:black;">
-            <i class="fa fa-github" style="color:black;font-size:22px"></i> etank0
+            <i class="fa fa-github" style="color:black;font-size:22px"></i> etank0 /
+        </a>
+        <a href="https://www.linkedin.com/in/swetank-upadhyay-565a0b229" style="text-decoration:none;color:black;">
+            <i class="fa fa-linkedin-square text-primary" style="font-size:22px"></i> Swetank Upadhyay 
         </a>
         <br>
         <p class="mb-5 small text-center text-muted">
