--- a/templates/bookmarks.html
+++ b/templates/bookmarks.html
@@ -12,7 +12,7 @@
         </div>
     </h4>
     {% if not exist: %}
-    <p class="mb-5 medium text-center text-muted">Nothing to show here!</p>
+    <p class="mb-5 medium text-center text-muted">Nothing to show here. Add bookmarks from home page!</p>
     {% else: %} 
     <div class="home-grid bookmarks-content-box">
         {% for entry in bktable: %}
