--- a/templates/layout.html
+++ b/templates/layout.html
@@ -85,6 +85,8 @@
         </header>
     {% endif %}
 
+    {% block pref_header %}{% endblock %} 
+
     <main class="container-fluid py-5 text-center">
         {% block main %}{% endblock %}
     </main>
